crates/stef-compiler/tests/inputs/validate/struct_gen_unused.stef
struct Sample<T> {
    value: string @1,
}
