crates/stef-compiler/tests/inputs/invalid/resolve_gens_mismatch.stef
struct Sample {
    value: Other @1,
}

struct Other<T>(T @1)
